--- a/moviles.html
+++ b/moviles.html
@@ -12,7 +12,7 @@
     </header>
     <nav>
         <section>
-            <a href="inicio.html">Inicio</a>
+            <a href="index.html">Inicio</a>
             <a href="accion.html">Accion</a>
             <a href="terror.html">Terror</a>
             <a href="moviles.html">Moviles</a>
