--- a/terror.html
+++ b/terror.html
@@ -70,7 +70,10 @@
     </main>
     <footer>
         <P>
-            SERGIO MEJIA | POPAYAN | CAUCA | 3147743171
+            SERGIO MEJIA  
+        <a class="face" href="https://www.facebook.com/profile.php?id=100007571626182&mibextid=ZbWKwL">FACEBOOK</a>
+        <a class="wpp" href="https://wa.me/573147743171">WHATSAPP</a>
+        <a class="git" href="https://github.com/mejia-08">GITHUB</a>
         </P> 
     </footer>
 </body>
